@@ -1,7 +1,7 @@
 {
   "name": "patternlab-node",
   "description": "Pattern Lab is a collection of tools to help you create atomic design systems. This is the node command line interface (CLI).",
-  "version": "0.8.0",
+  "version": "0.8.1",
   "devDependencies": {
     "grunt": "~0.4.0",
     "grunt-contrib-watch": "^0.6.1",
